So first idea. The horizontal stretch in the bw-input-group may be causing some issues

--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -60,7 +60,6 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    align-items: stretch;
     justify-content: space-between;
     padding: $spacing-unit/2;
     background-color: inherit;
